# dna.playfair

./: Cargo.toml
src/: main.rs  playfair.rs
src/playfair/: constants.rs
